[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/Levels/Level_manager.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/menu_background1.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/feeling_bar_icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/feeling_bar.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/fearful_bar.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/joyful_bar.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/health_bar.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Components/Analog.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/UI/action_btn.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/action_btn_pressed.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Components/Character.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Components/Boy.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/Levels/entrance.gd" type="Script" id=13]
[ext_resource path="res://Assets/Items/target_locked_icon.png" type="Texture" id=14]
[ext_resource path="res://Assets/Scene/wall.png" type="Texture" id=15]
[ext_resource path="res://Assets/UI/set2_background.png" type="Texture" id=16]

[sub_resource type="Animation" id=7]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0470588, 0.0431373, 0.0431373, 0 ), Color( 0.0470588, 0.0431373, 0.0431373, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "repairer"
tracks/0/type = "value"
tracks/0/path = NodePath(".:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 9 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 259.233, 9.28438 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25.2328, 9.28438 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 318.233, 9.28438 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9.23273, 165.136 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9.23273, 165.136 )

[node name="Scene" type="Node2D"]
script = ExtResource( 1 )

[node name="UI_screen" type="Node2D" parent="."]

[node name="Dir_btns" type="Node2D" parent="UI_screen"]

[node name="canvas" type="CanvasLayer" parent="UI_screen/Dir_btns"]

[node name="level_transition" type="Sprite" parent="UI_screen/Dir_btns/canvas"]
modulate = Color( 0.0470588, 0.0431373, 0.0431373, 0 )
position = Vector2( 364.298, 206.794 )
scale = Vector2( 0.679442, 0.699248 )
z_index = 4
texture = ExtResource( 2 )

[node name="Anim" type="AnimationPlayer" parent="UI_screen/Dir_btns/canvas/level_transition"]
anims/fade_out = SubResource( 7 )

[node name="minions_box" type="Node2D" parent="UI_screen/Dir_btns/canvas"]
position = Vector2( -425.678, -104.652 )

[node name="ui_items" type="Node2D" parent="UI_screen/Dir_btns/canvas"]

[node name="feeling_bar" type="Node2D" parent="UI_screen/Dir_btns/canvas/ui_items"]
position = Vector2( 36.6064, 16.4436 )
scale = Vector2( 0.15, 0.15 )

[node name="feeling_bar_icon" type="Sprite" parent="UI_screen/Dir_btns/canvas/ui_items/feeling_bar"]
position = Vector2( -112.235, 47.0391 )
texture = ExtResource( 3 )

[node name="fear_bar" type="TextureProgress" parent="UI_screen/Dir_btns/canvas/ui_items/feeling_bar"]
margin_left = -14.0
margin_right = 673.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 60, 44 )
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="joy_bar" type="TextureProgress" parent="UI_screen/Dir_btns/canvas/ui_items/feeling_bar"]
margin_left = -14.0
margin_right = 673.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 60, 44 )
value = 50.0
texture_progress = ExtResource( 6 )
fill_mode = 1

[node name="stamina_bar" type="Node2D" parent="UI_screen/Dir_btns/canvas/ui_items"]
position = Vector2( 616.434, 16.4436 )
scale = Vector2( 0.15, 0.15 )

[node name="health_bar" type="TextureProgress" parent="UI_screen/Dir_btns/canvas/ui_items/stamina_bar"]
margin_left = -14.0
margin_right = 673.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 60, 44 )
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 7 )

[node name="Analog" parent="UI_screen/Dir_btns/canvas" instance=ExtResource( 8 )]
position = Vector2( 74.015, 338.041 )
scale = Vector2( 0.832915, 0.832915 )

[node name="Repair_btn" type="Button" parent="UI_screen/Dir_btns/canvas"]
margin_left = 636.0
margin_top = 322.0
margin_right = 1225.0
margin_bottom = 916.0
rect_scale = Vector2( 0.135567, 0.135567 )
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
icon = ExtResource( 9 )
flat = true

[node name="Anim" type="AnimationPlayer" parent="UI_screen/Dir_btns/canvas/Repair_btn"]
anims/repairer = SubResource( 1 )

[node name="Action_btns" type="Node2D" parent="UI_screen"]

[node name="Stage" type="Node2D" parent="."]

[node name="Characters" type="Node2D" parent="Stage"]

[node name="Bro" parent="Stage/Characters" instance=ExtResource( 11 )]
position = Vector2( -93, 74.823 )

[node name="Boy" parent="Stage/Characters" instance=ExtResource( 12 )]

[node name="Monsters" type="Node2D" parent="Stage"]

[node name="fake_inbetweens" type="Node2D" parent="Stage/Monsters"]
editor/display_folded = true

[node name="inb_1" type="Node2D" parent="Stage/Monsters/fake_inbetweens"]
position = Vector2( -238, -14 )

[node name="inb_2" type="Node2D" parent="Stage/Monsters/fake_inbetweens"]
position = Vector2( 11, -68 )

[node name="inb_3" type="Node2D" parent="Stage/Monsters/fake_inbetweens"]
position = Vector2( 203, -65 )

[node name="inb_4" type="Node2D" parent="Stage/Monsters/fake_inbetweens"]
position = Vector2( 213, 104 )

[node name="entrance" type="Node2D" parent="Stage/Monsters"]
position = Vector2( -242, -140 )
script = ExtResource( 13 )
flux = 10
boy_nodepath = NodePath("../../Characters/Boy")

[node name="monsters_items" type="Node2D" parent="Stage/Monsters"]
position = Vector2( 219, 117 )

[node name="target_locked_icon" type="Sprite" parent="Stage/Monsters/monsters_items"]
position = Vector2( -1244.13, -242.362 )
scale = Vector2( 0.0765221, 0.0765221 )
texture = ExtResource( 14 )

[node name="monsters_container" type="Node2D" parent="Stage/Monsters"]

[node name="Walls" type="Node2D" parent="Stage"]
editor/display_folded = true
position = Vector2( 374.767, 28.2843 )

[node name="Walls_container" type="StaticBody2D" parent="Stage/Walls"]

[node name="wall_collider1" type="CollisionShape2D" parent="Stage/Walls/Walls_container"]
position = Vector2( -328, -164 )
z_index = 1
shape = SubResource( 2 )

[node name="wall_collider5" type="CollisionShape2D" parent="Stage/Walls/Walls_container"]
position = Vector2( -676, -165 )
z_index = 1
shape = SubResource( 3 )

[node name="wall_collider2" type="CollisionShape2D" parent="Stage/Walls/Walls_container"]
position = Vector2( -384, 152 )
z_index = 1
shape = SubResource( 4 )

[node name="wall_collider3" type="CollisionShape2D" parent="Stage/Walls/Walls_container"]
position = Vector2( -77, -7 )
z_index = 1
shape = SubResource( 5 )

[node name="wall_collider4" type="CollisionShape2D" parent="Stage/Walls/Walls_container"]
position = Vector2( -693, -8 )
z_index = 1
shape = SubResource( 6 )

[node name="wall" type="Sprite" parent="Stage/Walls"]
position = Vector2( -329.793, -163.9 )
scale = Vector2( 0.382425, 0.123188 )
texture = ExtResource( 15 )

[node name="wall5" type="Sprite" parent="Stage/Walls"]
position = Vector2( -672.033, -163.9 )
scale = Vector2( 0.0388828, 0.123188 )
texture = ExtResource( 15 )

[node name="wall6" type="Sprite" parent="Stage/Walls"]
modulate = Color( 0.0745098, 0.0352941, 0.0352941, 1 )
position = Vector2( -617.585, -163.9 )
scale = Vector2( 0.0462595, 0.123188 )
texture = ExtResource( 15 )

[node name="wall2" type="Sprite" parent="Stage/Walls"]
position = Vector2( -383.344, 151.716 )
scale = Vector2( 0.471999, 0.123188 )
texture = ExtResource( 15 )

[node name="wall3" type="Sprite" parent="Stage/Walls"]
position = Vector2( -76.46, -7.38293 )
rotation = 1.5708
scale = Vector2( 0.247537, 0.123188 )
texture = ExtResource( 15 )

[node name="wall4" type="Sprite" parent="Stage/Walls"]
position = Vector2( -693.057, -10.2112 )
rotation = 1.5708
scale = Vector2( 0.247537, 0.123188 )
texture = ExtResource( 15 )

[node name="Items" type="Node2D" parent="Stage"]

[node name="set2_background" type="Sprite" parent="."]
visible = false
modulate = Color( 0.636719, 0.027359, 0.027359, 1 )
position = Vector2( -2.35253, 2.21445 )
scale = Vector2( 0.828125, 0.625 )
z_index = -3
texture = ExtResource( 16 )
[connection signal="button_down" from="UI_screen/Dir_btns/canvas/Repair_btn" to="Stage/Characters/Bro" method="_on_Repair_btn_button_down"]
